--- a/lab03.ipynb
+++ b/lab03.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 152,
       "id": "2",
       "metadata": {},
       "outputs": [
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 153,
       "id": "4",
       "metadata": {},
       "outputs": [],
@@ -206,12 +206,12 @@
         "\n",
         "Fir: $1.5 \\cdot G_1 + 3.0 \\cdot G_2 + 2.0 \\cdot G_3 \\leq 720$\n",
         "\n",
-        "\n"
+        "We also have non-negativeity constraints to make sure that the amount of each grade produced is above 0.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 154,
       "id": "6",
       "metadata": {},
       "outputs": [
@@ -255,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 155,
       "id": "8",
       "metadata": {},
       "outputs": [
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 156,
       "id": "10",
       "metadata": {},
       "outputs": [
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 157,
       "id": "12",
       "metadata": {},
       "outputs": [
@@ -357,7 +357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 158,
       "id": "14",
       "metadata": {},
       "outputs": [
@@ -388,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 159,
       "id": "16",
       "metadata": {},
       "outputs": [
@@ -412,7 +412,7 @@
       "source": [
         "## Solution\n",
         "\n",
-        "Based on my optimization model, the shadow price of spruce and fir to purchase are $80 and $120 bf, respectively. This is the amount that the profit will improve or worsen per unit increase in spruce or fir, assuming everything else stays constant. \n",
+        "Based on my optimization model, the shadow price of spruce and fir to purchase are $80 and $120 bf, respectively. This is the amount that the profit will improve or worsen per unit increase in spruce or fir, assuming everything else stays constant.\n",
         "\n",
         "352,000 bf of Grade 1 lumber, 0 bf of Grade 2 lumber and 96,000 bf of Grade 3 lumber will be produced, maximizing profit to be $112,000. The total amount of plywood that will be produced is 448,000 bf. "
       ]
